refactor(kit): improve kit service storage performance (#67)
* feat(kit): improve annotation handling

* feat(kit): improve annotation handling for the event part

* chore(kit): improve data storage and optional handling

* chore(kit): improve test part

* test(kit): improve variable naming

---------

Co-authored-by: theEvilReaper <theevilreaper@users.noreply.github.com>