@@ -2,16 +2,14 @@ package net.theevilreaper.xerus.api.kit;
 
 import net.kyori.adventure.key.Key;
 import org.jetbrains.annotations.Contract;
-import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.UnmodifiableView;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
+import java.util.concurrent.ConcurrentHashMap;
 
 /**
  * The class represents a default implementation of the {@link KitService} interface.
@@ -19,19 +17,19 @@ import java.util.Optional;
  * If your use case doesn't fit into this please implement your own {@link KitService} implementation.
  *
  * @author theEvilReaper
- * @version 1.1.0
+ * @version 1.2.0
  * @since 1.2.0
  **/
 public final class DefaultKitService implements KitService {
 
     private static final Logger KIT_LOGGER = LoggerFactory.getLogger(DefaultKitService.class);
-    private final List<Kit> kits;
+    private final Map<Key, Kit> kits;
 
     /**
      * Creates a new instance of the {@link DefaultKitService}.
      */
     DefaultKitService() {
-        this.kits = new ArrayList<>();
+        this.kits = new ConcurrentHashMap<>();
     }
 
     /**
@@ -47,34 +45,27 @@ public final class DefaultKitService implements KitService {
      * {@inheritDoc}
      */
     @Override
-    public void add(@NotNull Kit kit) {
-        if (kits.contains(kit)) {
+    public void add(Kit kit) {
+        if (this.kits.containsKey(kit.key())) {
             KIT_LOGGER.info("Overwriting existing kit!");
         }
-        this.kits.add(kit);
+        this.kits.put(kit.key(), kit);
     }
 
     /**
      * {@inheritDoc}
      */
     @Override
-    public boolean remove(@NotNull Key identifier) {
-        return this.kits.removeIf(iKit -> iKit.key().equals(identifier));
+    public boolean remove(Key identifier) {
+        return this.kits.remove(identifier) != null;
     }
 
     /**
      * {@inheritDoc}
      */
     @Override
-    public @NotNull Optional<@Nullable Kit> getKit(@NotNull Key name) {
-        Kit kit = null;
-        for (int i = 0; i < kits.size() && kit == null; i++) {
-            if (kits.get(i).key().equals(name)) {
-                kit = kits.get(i);
-            }
-        }
-
-        return Optional.ofNullable(kit);
+    public Optional<Kit> getKit(Key name) {
+        return Optional.ofNullable(this.kits.get(name));
     }
 
     /**
@@ -82,7 +73,7 @@ public final class DefaultKitService implements KitService {
      */
     @Contract(pure = true)
     @Override
-    public @NotNull @UnmodifiableView List<Kit> getKits() {
-        return Collections.unmodifiableList(this.kits);
+    public @UnmodifiableView List<Kit> getKits() {
+        return List.copyOf(this.kits.values());
     }
 }
